# DumbPhysicsEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg.json
include/: particle.h
include/dumb/: particle.h
samples/: Particle_Sample.cpp
src/: main.cpp  particle.cpp
